--- a/package.json
+++ b/package.json
@@ -3,14 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.3.0",
+    "@blueprintjs/datetime": "^3.1.0",
+    "@blueprintjs/icons": "^3.1.0",
+    "@blueprintjs/select": "^3.1.0",
+    "Idle.Js": "https://github.com/shawnmclean/Idle.js",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "date-fns": "^1.29.0",
+    "fixed-data-table-2": "^0.8.14",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
+    "phoenix": "^1.3.4",
+    "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.2",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-event-timeline": "^1.5.4",
+    "react-loadable": "^5.5.0",
+    "react-motion": "^0.5.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "precommit": "lint-staged",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer build/static/js/main.*"
+  },
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:4000",
+      "secure": false,
+      "ssl": false
+    },
+    "/socket": {
+      "target": "ws://localhost:4000",
+      "ws": true
+    }
   }
 }
