--- a/package.json
+++ b/package.json
@@ -44,10 +44,8 @@
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "proxy": {
-    "/api": {
-      "target": "http://localhost:4000",
-      "secure": false,
-      "ssl": false
+    "/api/browser": {
+      "target": "http://localhost:4000"
     },
     "/socket": {
       "target": "ws://localhost:4000",
