--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "Idle.Js": "https://github.com/shawnmclean/Idle.js",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "core-js": "2.5.1",
+    "d3-interpolate": "1",
+    "d3-shape": "^1.2.2",
     "date-fns": "^1.29.0",
     "fixed-data-table-2": "^0.8.14",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
@@ -26,6 +29,7 @@
     "react-loadable": "^5.5.0",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
+    "react-resize-detector": "1.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
