--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-resize-detector": "1.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "recharts": "^1.2.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
