--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fuse.js": "^3.2.1",
     "fuzzysearch": "^1.0.3",
     "lodash": "^4.17.11",
+    "mapbox-gl": "^0.49.0",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
@@ -32,6 +33,7 @@
     "react-dom": "^16.4.2",
     "react-event-timeline": "^1.5.4",
     "react-loadable": "^5.5.0",
+    "react-mapbox-gl": "^3.9.2",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-resize-detector": "1.1.0",
@@ -39,17 +41,18 @@
     "react-scripts": "1.1.4",
     "recharts": "^1.2.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^3.4.9"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
+    "start-js": "react-app-rewired start",
     "precommit": "lint-staged",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-app-rewired build",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer build/static/js/main.*",
     "flow": "flow"
@@ -64,7 +67,10 @@
     }
   },
   "devDependencies": {
-    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "flow-bin": "^0.81.0",
     "flowtype-loader": "^0.2.2",
     "react-app-rewired": "^1.6.2"
